# home-server-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/auth/: jwt_handler.py  password.py
app/core/env/: config.py
app/core/handlers/: exception_handlers.py
app/core/logger/: logger.py  logging_config.py  logging_filters.py
app/core/middleware/: request_context.py  request_metrics.py
app/models/: error_models.py  user.py
app/routes/: auth.py  users.py
